# advfusion

./: .prettierrc  README.md  adapters-1.2.0-py3-none-any.whl  main.py  pyproject.toml  requirements.txt  train.sh  train_advf.sh  train_multi.sh
docs/: advfusion.md
examples/: train.sh  train_advf.sh  train_fusion.sh  train_multi.sh  visualize_data.sh
jobs/: train_adp.sh
jobs/dra/: _setup.sh  train_adp.sh  train_adp_codellama_juila.sh  train_adp_codellama_lua.sh  train_adp_codellama_r.sh  train_adp_codellama_ruby.sh  train_adp_codellama_rust.sh  train_adp_codellama_scala.sh  train_adp_qwen32.sh  train_advf_codellama_lua.sh  train_fusion_codellama_lua.sh
jobs/dra/cl_ct/: adp_juila.sh
jobs/dra/codellama7b_ct/: adp_juila.sh
jobs/dra/dscoder1.3b_ct/: adp_juila.sh
jobs/dra/qwen2.5coder32b_ct/: adp_juila.sh  adp_julia.sh  adp_ruby.sh  adp_scala.sh  adp_swift.sh  advf_julia.sh
jobs/dra/qwen2.5coder3b_ct/: adp_juila.sh  adp_julia.sh  adp_ruby.sh  (+6 more)
jobs/local/: _setup.sh  infer_adp.sh  train_adp.sh
scripts/: model_examine.py  read_generations.py  train.py  train_advf.py  train_fusion.py  visualize_data.py
src/advfusion/: advfusion.py  advfusion_utils.py  args.py  fusion_args.py
src/dataset/: args.py  constants.py  custom_processors.py  dataset.py  processors.py  utils.py
src/evaluate/: evaluate.py
src/generation/: args.py  generation.py
src/model/: args.py  model.py  report.py  utils.py
src/peft/: adapters_interfaces.py  args.py  configs.py  peft.py
src/train/: args.py  train.py  trainer.py
src/utils/: args.py  jsonl.py  resource_logger.py
(+11 files in other folders)
