[project]
name = "advfusion-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "adapters>=1.2.0",
    "bitsandbytes>=0.46.1",
    "datasets>=4.0.0",
    "peft>=0.16.0",
    "torch>=2.7.1",
    "transformers>=4.51.3",
]
