[project]
name = "advfusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "accelerate>=1.8.1",
    "adapters>=1.2.0",
    "bitsandbytes>=0.46.1",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "nltk>=3.9.1",
    "peft>=0.16.0",
    "rich>=14.0.0",
    "rouge-score>=0.1.2",
    "simple-parsing>=0.1.7",
    "torch>=2.7.1",
    "transformers>=4.51.3",
]
